# ui_python_selenium_sample

./: .gitignore  README.md  pyproject.toml  requirements.txt
base/: page.py
pages/: cart_page.py  client_information_page.py  finish_page.py  login_page.py  main_page.py  payment_page.py
tests/: conftest.py  test_add_to_cart.py  test_login.py  test_navigation.py
tests/e2e/: test_buy_product.py
