[project]
# Support Python 3.10+.
requires-python = ">=3.10"

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 99

[tool.pytest.ini_options]
# The name of the log file.
log_file = "logs/pytest.log"

# Set the logging level.
log_file_level = "INFO"

# Define the format of log.
log_file_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"

# Define the date and time format for log.
log_file_date_format = "%Y-%m-%d %H:%M:%S"
